# WildLIFE

./: .gitignore  README.md
Life/: INSTALL  LICENSE  README
Life-1.02/Demo/: check_fp.in  color_edit.lf  x_zebra.lf
Life-1.02/Demo/Fonts/: terminal_bold_narrow28.pcf.Z
Life-1.02/Doc/: Makefile  Parser.doc  c_life.doc
Life-1.02/EmacsMode/: life-mode.el
Life-1.02/Examples/SuperLint/: c_builders.lf  rl_overload.lf
Life-1.02/Lib/: acc_declarations.lf  x_constants.lf
Life-1.02/Source/: bi_sys.c  built_ins.h  configure  copy.c  copy.h  hash_table.c  info.c  lefun.h  list.c  login.c  lub.c  memory.c  parser.c  raw.h  templates.h  token.c  types.c  types.h  xdisplaylist.c
Life-1.02/Source/regexp/: Makefile  regexp.h  regsub.c  timer.c
Life-1.02/Tests/: README  check
Life-1.02/Tests/FILES/: copyfile.1
Life-1.02/Tests/IN/: andor2.in  andor5.in  anyorder.in  arith7.in  bagof5.in  canonical.in  cb.in  charcode.in  condpred.in  curry2.in  curry8.in  dynstat.in  hamming.in  intabs.in  isatest2.in  lefun1.in  longstr.in  makestr.in  manual1.in  manual8.in  module_test1.in  module_test4.in  module_test5.in  pers2.in  persistent2.in  prove.in  pyth2.in  soap.in  subsort.in  titi.in  tri_ins.in  z_comb.in
Life-1.02/Tests/LF/: boites2.lf  comp_struct.lf  compose2.lf  copy2.lf  curry1.lf  cut2.lf  dichotomy.lf  disequality4.lf  disj3.lf  dissolve.lf  feat_order.lf  fusil.lf  hamming.lf  intdiv3.lf  lefun2.lf  libstruct.lf  machine.lf  manual6.lf  many_types.lf  module_test3.lf  module_test5.lf  mort.lf  retract3.lf  self.lf  str2psi.lf  t3204.lf  test03.lf  test04.lf  titi.lf  wlife.lf  z_gctoken2.lf  z_maurice.lf
Life-1.02/Tests/REFERR/: arith4.referr  arith7.referr  curry14.referr
Life-1.02/Tests/REFOUT/: arith9.refout  boolpred2.refout  call1.refout  constr.refout  curry6.refout  hasfeature.refout  inherit.refout  list_bda.refout  manual8.refout  part.refout  print_depth1.refout  sortcycle4.refout  t3205.refout  t8105.refout  unify.refout
Life-1.02/Tools/: Parser.doc  acc_declarations.lf  accumulators.lf  debug.lf
Life-2.16/Demo/: INSTALL  Makefile  life_demo.lf.in  slides.ps
Life-2.16/Demo/Fonts/: terminal_bold_narrow14.pcf.Z
Life-2.16/Doc/: Loader.doc  dumant2.ps  toolkit.tex
Life-2.16/EmacsMode/OLD/: wild_life-mode.el  wl-mode.el
Life-2.16/Examples/: Schedule.doc
Life-2.16/Examples/SuperLint/: c_public_terms.lf  sl.lf  testsl.c
Life-2.16/Lib/: std_expander.exp  tokenizer.lf
Life-2.16/Source/: NOTES_DJD.txt  arity.c  bi_sys.c  bi_type.c  built_ins.c  config.cache  copy.c  cpaaa.sh  d.sh  dd.sh  diffs.out  djd  ee  ee1  ee3  ee4  error.c  extern.h  lefun.c  life.c  list.h  login.c  login.h  login.old.c  lub.c  memory.c  p1.lf  part2  pitch.out  raw.c  sys.c  sys.h  templates.c  templates.h  term_expansion.lf  token.h  trees.c  ts2.sh  tsnow.sh  tsted  (+5 more)
Life-2.16/Source/DJD_listing/: .wild_life  ll
Life-2.16/Source/DJD_tan/: .wild_life  tt
Life-2.16/Source/pitch/: .wild_life  djd-pitch.lf  pitch.errout
Life-2.16/Source/regexp/: Try.c  regexp.c  regexp.h  timer.c
Life-2.16/TestNow/: Makefile  approve  approve_out.sh  check_all  check_edit  check_edit_all
Life-2.16/TestNow/APPROVED/: andor3.approved  arith3.approved  bitnot.approved  boites1.approved  boolpred2.approved  call1.approved  comp_struct.approved  compose.approved  curry1.approved  curry14.approved  curry15.approved  curry5.approved  curry8.approved  delay2.approved  dichotomy.approved  disequality1.approved  disequality2.approved  disequality7.approved  disequality9.approved  eratosthenes.approved  feature.approved  glb.approved  global.approved  global3.approved  hasfeature.approved  intabs.approved  lazyinherit.approved  list_bda.approved  longstr.approved  lub.approved  manual6.approved  nicetest.approved  not.approved  parse2.approved  profiler3.approved  resid2.approved  (+1 more)
Life-2.16/Tests/: aaa-djd-pitch.lf  check_edit  editdiffs.sh  wild_life.exe.stackdump
Life-2.16/Tools/: Debug.doc  README  Shell.doc  parser.exp  parser.lf  shell_interface.lf  tokenizer.lf
Life-2.33/Life-1.02/: LICENSE  Makefile
Life-2.33/Life-1.02/Source/: README  bi_math.c  bi_type.c  c_life.h  configure.in  error.c  extern.h  lefun.c  lib.c  life.c  list.h  login.h  memory.h  modules.c  modules.h  parser.h  print.h  raw.c  sys.c  sys_dbm.c  templates.c  trees.c  trees.h  xdisplaylist.h  xpred.h
Life-2.33/Life-1.02/Source/regexp/: Try.c  regexp.c
Life-2.33/Life-2.16/: INSTALL  Makefile
Life-2.33/Life-2.33/: INSTALL  c_check  c_check_all
Life/Demo/: crypt.lf
Life/Doc/: Tokenizer.txt  life-mode.doc
Life/EmacsMode/: life-emphasize.el
Life/Examples/: Makefile  simple.lf  soap.lf
Life/Lib/: control.lf  loader.lf  parser.lf  test.lf  times.lf
Life/ScreenCaptures/: ScreenCapture01s.docx
Life/Source/: Makefile  Makefile.102  Makefile.X  Makefile.in  Port.txt  arity.c  bi_math.c  bi_sys.c  bi_type.c  built_ins.c  copy.c  cp_local.sh  def_const.h  def_glob_premint.h  def_macro.h  def_proto.h  def_struct.h  defs.h  defs_static.h  ee  ee1  ee3  ee6  error.c  error.h  hash_table.c  info.c  interrupt.c  lefun.c  lib.c  life.c  list.c  login.c  lub.c  memory.c  mk-1.02.sh  mk-X.sh  mk.sh  modules.c  parser.c  (+14 more)
Life/Tests/: Makefile~  approve_out-1.02.sh  approve_out-X.sh  approve_out.sh  check_edit  check_edit-1.02  check_edit-X  check_edit_all  check_edit_all-1.02  check_edit_all-X  rest_out-1.02.sh  rest_out-X.sh  what_directories_for.txt  work-1.02.sh  work-X.sh  work.sh  xxxooo
(+2431 files in other folders)
